[gd_scene load_steps=12 format=2]

[ext_resource path="res://inventury/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://inventury/InventuryUI.gd" type="Script" id=2]
[ext_resource path="res://inventury/weapons/wepon_container.gd" type="Script" id=3]
[ext_resource path="res://fonts/LXGWWenKaiGB-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://inventury/selected.png" type="Texture" id=5]
[ext_resource path="res://inventury/shoes/shoes_container.gd" type="Script" id=6]
[ext_resource path="res://inventury/shield/shield_container.gd" type="Script" id=7]
[ext_resource path="res://inventury/ItemSlot_3.tscn" type="PackedScene" id=8]
[ext_resource path="res://inventury/ItemSlot_2.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/theme.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 8
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 4 )

[node name="InventuryUI" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -65.0
margin_right = 106.5
margin_bottom = 65.0
theme = ExtResource( 10 )
window_title = "背包"
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -65.0
margin_right = 106.5
margin_bottom = 65.0
all_tabs_in_front = true

[node name="weapon_container" type="GridContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 17.0
custom_constants/vseparation = 6
custom_constants/hseparation = 28
columns = 4
script = ExtResource( 3 )

[node name="ItemSlot" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]

[node name="ItemSlot2" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_left = 60.0
margin_right = 92.0

[node name="ItemSlot3" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_left = 120.0
margin_right = 152.0

[node name="ItemSlot4" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_left = 180.0
margin_right = 212.0

[node name="ItemSlot5" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_top = 38.0
margin_bottom = 70.0

[node name="ItemSlot6" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_left = 60.0
margin_top = 38.0
margin_right = 92.0
margin_bottom = 70.0

[node name="ItemSlot7" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 38.0
margin_right = 152.0
margin_bottom = 70.0

[node name="ItemSlot8" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_left = 180.0
margin_top = 38.0
margin_right = 212.0
margin_bottom = 70.0

[node name="ItemSlot9" parent="TabContainer/weapon_container" instance=ExtResource( 1 )]
margin_top = 76.0
margin_bottom = 108.0
texture = ExtResource( 5 )

[node name="shield_container" type="GridContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
custom_constants/vseparation = 6
custom_constants/hseparation = 28
columns = 4
script = ExtResource( 7 )

[node name="ItemSlot" parent="TabContainer/shield_container" instance=ExtResource( 9 )]

[node name="ItemSlot2" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 68.0

[node name="ItemSlot3" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 104.0

[node name="ItemSlot4" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_left = 108.0
margin_right = 140.0

[node name="ItemSlot5" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_top = 36.0
margin_bottom = 68.0

[node name="ItemSlot6" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0

[node name="ItemSlot7" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0

[node name="ItemSlot8" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0

[node name="ItemSlot9" parent="TabContainer/shield_container" instance=ExtResource( 9 )]
margin_top = 72.0
margin_bottom = 104.0
texture = ExtResource( 5 )

[node name="shoes_container" type="GridContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
theme = ExtResource( 10 )
custom_constants/vseparation = 6
custom_constants/hseparation = 28
columns = 4
script = ExtResource( 6 )

[node name="ItemSlot" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]

[node name="ItemSlot2" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_left = 36.0
margin_right = 68.0

[node name="ItemSlot3" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_left = 72.0
margin_right = 104.0

[node name="ItemSlot4" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_left = 108.0
margin_right = 140.0

[node name="ItemSlot5" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_top = 36.0
margin_bottom = 68.0

[node name="ItemSlot6" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0

[node name="ItemSlot7" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0

[node name="ItemSlot8" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0

[node name="ItemSlot9" parent="TabContainer/shoes_container" instance=ExtResource( 8 )]
margin_top = 72.0
margin_bottom = 104.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 50.5
margin_top = 94.0
margin_right = 130.5
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="equipment_changed" from="TabContainer/weapon_container" to="." method="_on_weapon_container_equipment_changed"]
[connection signal="equipment_changed" from="TabContainer/shield_container" to="." method="_on_shield_container_equipment_changed"]
[connection signal="equipment_changed" from="TabContainer/shoes_container" to="." method="_on_shoes_container_equipment_changed"]
